# WolframLanguagePatternMatcher

./: .clang-format  .gitignore  .project  CMakeLists.txt  README.md  build.zig  build.zig.zon  clang-format-all  libPatternMatcherVirtualMachine.dylib
Notes/: 20250530-Cronograma.md  20250719-Agenda.md  20250719-LibraryLink.nb
PatternMatcher/: PacletInfo.wl  ResourceDefinition.nb
PatternMatcher/Documentation/English/Guides/: ThePatternMatcherVirtualMachine.nb
PatternMatcher/Documentation/English/ReferencePages/Symbols/: CompilePatternToBytecode.nb  CompilePatternToFunction.nb  CreatePatternMatcherVirtualMachine.nb  PatternBytecode.nb  PatternBytecodeDisassemble.nb  PatternBytecodeInformation.nb  PatternBytecodeQ.nb  PatternMatcherEnableTrace.nb  PatternMatcherExecute.nb  PatternMatcherMatch.nb  PatternMatcherMatchQ.nb  PatternMatcherReplace.nb  PatternMatcherStep.nb  PatternMatcherTraceEnabled.nb  PatternMatcherTraceEnabledQ.nb  PatternMatcherVirtualMachine.nb  PatternToMatchFunction.nb
PatternMatcher/Kernel/: ErrorHandling.wl  MExprUtilities.wl  PatternMatcher.wl  PatternMatcherVM.wl
PatternMatcher/Kernel/AST/: AST.wl  MExprUtilities.wl
PatternMatcher/Kernel/BackEnd/: BackEnd.wl  PatternBytecode.wl  PatternBytecodeFormat.wl  VirtualMachine.wl
PatternMatcher/Kernel/BackEnd/Interpreted/: Interpreted.wl  PatternBytecode.wl  VirtualMachine.wl
PatternMatcher/Kernel/FrontEnd/: CompilePatternToBytecode.wl  CompilePatternToFunction.wl  FrontEnd.wl  PatternMatcherExecute.wl  PatternMatcherMatchQ.wl  PatternMatcherReplace.wl  PatternToMatchFunction.wl
PatternMatcher/Kernel/Utilities/: LibraryLink.wl  Logger.wl  OpcodeInformation.m  TestSuiteUtilities.m
PatternVirtualMachine/: ResourceDefinition.nb
PatternVirtualMachine/Documentation/English/Guides/: ThePatternMatcherVirtualMachine.nb
PatternVirtualMachine/Documentation/English/ReferencePages/Symbols/: CreatePatternMatcherVirtualMachine.nb  PatternMatcherMatch.nb  PatternMatcherStep.nb  PatternMatcherVirtualMachine.nb
PatternVirtualMachine/Kernel/: LibraryLink.wl  MExprUtilities.wl
PatternVirtualMachine/Kernel/BackEnd/: PatternBytecode.wl
PatternVirtualMachine/Kernel/FrontEnd/: CompilePatternToBytecode.wl  CompilePatternToFunction.wl
PatternVirtualMachine/LibraryLink/: PatternMatcherVM.cpp
PatternVirtualMachine/Tests/: CompilePatternToFunction.nb
PatternVirtualMachine/src/: AST.zig  EmbedSupport.zig  Expr.zig  LibraryLink.c  ObjectFactory.zig  WolframRTL.zig
cmake/: FindWolframEngine.cmake
cmake/WRICMakeModules/: Downloads.cmake  WRICommon.cmake
cmake/WRICMakeModules/Paclets/: MathLink.cmake  Paclets.cmake  RuntimeLibrary.cmake  WSTP.cmake  WindowsLibraryVersion.rc  iOSFrameworkInfo.plist  visionOSFrameworkInfo.plist
notebooks/: 20251005-work.nb  20251006-work.nb  20251020-work.nb  20251023-work.nb  20251114.nb  20251115-work.nb  20251119-BetterDisassemble.nb  20251119-BetterTrace.nb  20251119-BlankSequence.nb  20251120-EvaluationMetrics.nb  20251120-Replace.nb  20251120-work.nb
notes/: 20250530-Cronograma.md  20251114_Report.md  20251114_Reporte.md  BLANKSEQUENCE_IMPLEMENTATION.md  Backtracking.md  Compilation.md  CompilePatternImprovements.md  ReporteOct10.md  evaluation_notebook_guide.md  paper_clean.tex  thesis_english.tex
paper/: mmacells.sty  paper_clean.fdb_latexmk  paper_clean.fls  paper_clean.tex  thesis_english.tex
src/: ClassSupport.h  Embeddable.h  Expr.cpp  Expr.h  LibraryLink.cpp  Logger.h  ObjectFactory.cpp  ObjectFactory.h  PatternMatcherVM.h  TypeTraits.h
src/AST/: MExpr copy.h  MExpr.cpp  MExpr.h  MExprEnvironment.cpp  MExprEnvironment.h  MExprLiteral.cpp  MExprNormal.cpp  MExprPatternTools.cpp  MExprPatternTools.h  MExprSymbol.cpp
src/VM/: Bytecode.cpp  Bytecode.h  CompilePatternToBytecode.cpp  CompilePatternToBytecode.h  Opcode.cpp  Opcode.h  OptimizePatternBytecode.cpp  OptimizePatternBytecode.h  PatternBytecode.cpp  PatternBytecode.h  VirtualMachine.cpp  VirtualMachine.h
tests/: CompilePatternToFunction.nb  CustomLoad.m  FinalizeTests.m  InitializeTests.m  TestSuite.mt0
tests/AST/: MExprEnvironment.mt  MExprLiteral.mt  MExprNormal.mt  MExprSymbol.mt  MExprUtilities.mt
tests/PatternMatcher/: BackEnd.mt  CompilePatternToFunction.mt  FrontEnd.mt  MiddleEnd.mt  PatternMatcherExecute.mt  PatternToMatchFunction.mt  SemanticEquivalence.mt
tmp/: PatternMatcherVM.cpp
zig/: build.zig  build.zig.zon
zig/src/: Expr.zig  StackVM.zig  VM.zig  VM2.zig  WolframLanguageRuntime.zig  apidefinition.c  main.zig
